--- a/.github/workflows/promote-prod-project-name.yml
+++ b/.github/workflows/promote-prod-project-name.yml
@@ -29,4 +29,4 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         if: ${{ env.GITHUB_TOKEN }}
-        run: echo "Hello World!"
+        run: npm run build
