--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
   "optionalDependencies": {},
   "husky": {
     "hooks": {
-      "prepare-commit-msg": "exec < /dev/tty && git cz || true",
+      "prepare-commit-msg": "exec < /dev/tty && git cz --hook || true",
       "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
     }
   },
