--- a/.github/workflows/promote-dev-from-feature-branch.yml
+++ b/.github/workflows/promote-dev-from-feature-branch.yml
@@ -1,20 +1,26 @@
-name: promote-prod-stardust
+name: promote-dev-from-feature-branch
 
 on:
   push:
-    branches:
-      - master
+    branches-ignore:
+      - refs/tags/*
+
+env:
+  NPM_TOKEN: ${{ secrets.BOT_REGISTRY_TOKEN }}
+  NPM_CONFIG_USERCONFIG: .npmrc
 
 jobs:
-  publish:
+  test-lint:
+    if: |
+      !contains(github.event.head_commit.author.name, 'james-pontte')
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v2
+
       - uses: actions/setup-node@v1
 
       - name: Install dependencies
-        run: npm ci
+        run: npm ci --no-optional
 
       - uses: actions/cache@v1
         with:
@@ -25,8 +31,5 @@ jobs:
             ${{ runner.os }}-build-
             ${{ runner.os }}-
 
-      - name: Promote production release
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        if: ${{ env.GITHUB_TOKEN }}
-        run: npm run build
+      - name: Run lint test
+        run: npm run test-lint
