--- a/package.json
+++ b/package.json
@@ -31,12 +31,14 @@
   "devDependencies": {
     "@commitlint/cli": "^9.0.1",
     "@commitlint/config-conventional": "^9.0.1",
+    "@pontte/commitlint-config": "^1.0.0",
     "commitizen": "^4.1.2",
     "commitlint": "^9.0.1",
     "husky": "^4.2.5"
   },
   "peerDependencies": {
     "@commitlint/cli": "^9.0.1",
+    "@pontte/commitlint-config": "^1.0.0",
     "@pontte/semantic-release-config": "^1.0.2",
     "@semantic-release/changelog": "^5.0.1",
     "@semantic-release/git": "^9.0.0",
